Modify the KWICAlgorithm class